--- a/two week/index.html
+++ b/two week/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>第二週 - 個人網站</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400&family=Roboto:ital,wght@1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
