修改內容及修正跑版

--- a/two week/index.html
+++ b/two week/index.html
@@ -11,96 +11,100 @@
 <body>
 
     <div class="wrap">
-        <!-- 960-OK -->
-        <header class="header-bg">
-            <div class="header-content text-white">
+        <!-- header -->
+        <header class="header text-white">
+            <div class="f-column-center header-bg">
                 <span>Here's</span>
                 <h1>JOANNE</h1>
                 <p class="subtitle">Founder of &rsquo;&rsquo;XXXD Official&rsquo;&rsquo; <br>& Graphic Designer</p>
                 <ul class="info-link">
-                    <li><a href="javascript:void(0)"><img src="images/behance.svg" alt=""></a></li>
-                    <li><a href="javascript:void(0)"><img src="images/facebook.svg" alt=""></a></li>
-                    <li><a href="javascript:void(0)"><img src="images/instagram.svg" alt=""></a></li>
-                    <li><a href="javascript:void(0)"><img src="images/youtube.svg" alt=""></a></li>
+                    <li><a href="javascript:void(0)"><img src="images/behance.svg" alt="Behance icon"></a></li>
+                    <li><a href="javascript:void(0)"><img src="images/facebook.svg" alt="Facebook icon"></a></li>
+                    <li><a href="javascript:void(0)"><img src="images/instagram.svg" alt="Instagram icon"></a></li>
+                    <li><a href="javascript:void(0)"><img src="images/youtube.svg" alt="Youtube icon"></a></li>
                 </ul>
             </div>
         </header>
-        <!-- 993(994)-OK -->
-        <section class="about text-center">
-            <h2>About</h2>
-            <img src="images/photo.png" alt="">
-            <ul class="education pb-3">
-                <li>Joanne Chen</li>
-                <li>1997/10/10</li>
-                <li>National Hex School Normal University<br>EDepartment of Visual Design</li>
-            </ul>
-            <ul class="experience">
-                <li>Founder of ‘’XXXD Official’’</li>
-                <li>Graphic Designer</li>
-                <li>Graphic Intern of Hex School</li>
-            </ul>                
-        </section>
-        <!-- 1407(1406)-OK -->
-        <section class="brand bg-black text-center text-white">
-            <h2>My Brand ‘’XXXD’’</h2>
-            <p class="pb-3" style="line-height: 28px;">Just Keep XXXD Everyday</p>
-            <p class="introduce">2020 <span class="fs-normal">年創立的個人服飾品牌<br>引領叛逆少年開啟與社會對話的窗口<br>主打概念潮流</span>T-Shirt</p>
-            <div class="container">
-                <ul class="brand-clothes">
-                    <li>
-                        <img src="images/brand_img1.png" alt="">
-                    </li>
-                    <li>
-                        <img src="images/brand_img2.png" alt="">
-                    </li>
-                    <li>
-                        <img src="images/brand_img3.png" alt="">
-                    </li>
+        <!-- About -->
+        <section class="about">
+            <div class="f-column-center text-center">
+                <h2>About</h2>
+                <img src="images/photo.png" alt="Headshot" class="headshot">
+                <ul class="education pb-3">
+                    <li>Joanne Chen</li>
+                    <li>1997/10/10</li>
+                    <li>National Hex School Normal University<br>Department of Visual Design</li>
                 </ul>
+                <ul class="experience">
+                    <li>Founder of ‘’XXXD Official’’</li>
+                    <li>Graphic Designer</li>
+                    <li>Graphic Intern of Hex School</li>
+                </ul>                    
             </div>
         </section>
-        <!-- 1919(1920)-ok -->
+        <!-- Brand -->
+        <section class="brand bg-black text-white">
+            <div class="f-column-center">
+                <h2>My Brand ‘’XXXD’’</h2>
+                <p class="slogan">Just Keep XXXD Everyday</p>
+                <p class="introduce">2020 <span class="fs-normal">年創立的個人服飾品牌<br>引領叛逆少年開啟與社會對話的窗口<br>主打概念潮流</span>T-Shirt</p>
+                <div class="container">
+                    <ul class="brand-clothes">
+                        <li>
+                            <img src="images/brand_img1.png" alt="T-shirt">
+                        </li>
+                        <li>
+                            <img src="images/brand_img2.png" alt="coat">
+                        </li>
+                        <li>
+                            <img src="images/brand_img3.png" alt="clothes">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- Works -->
         <section class="works works-bg text-center">
             <div class="container">
                 <h2>Other Works</h2>
                 <p class="works-text">2016-2020 <span class="fs-normal">年累積的作品<br>海報/廣告/攝影</span>/LOGO/3D</p>
                 <ul class="card">
-                    <li>
-                        <img src="images/work_img1.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img1.png" alt="海報設計/2017">
                         <h3><span class="fs-normal">海報設計</span>/2017</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img2.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img2.png" alt="海報設計/2018">
                         <h3><span class="fs-normal">海報設計</span>/2018</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img3.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img3.png" alt="海報設計/2018">
                         <h3><span class="fs-normal">海報設計</span>/2018</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img4.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img4.png" alt="概念攝影/2018">
                         <h3><span class="fs-normal">概念攝影</span>/2018</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img5.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img5.png" alt="概念攝影/2018">
                         <h3><span class="fs-normal">概念攝影</span>/2018</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img6.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img6.png" alt="酒標設計/2019">
                         <h3>sasa <span class="fs-normal">酒標設計</span>/2019</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img7.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img7.png" alt="攝影創作/2018">
                         <h3><span class="fs-normal">攝影創作</span>/2018</h3>
                     </li>
-                    <li>
-                        <img src="images/work_img8.png" alt="">
+                    <li class="card-item">
+                        <img src="images/work_img8.png" alt="官網設計/2020">
                         <h3><span class="fs-normal">官網設計</span>/2020</h3>
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- 317-ok -->
+        <!-- Footer -->
         <footer class="text-white bg-black text-center">
             <div class="footer-content">
                 <h2>Contact</h2>
