修改內容及修正跑版

--- a/two week/index.html
+++ b/two week/index.html
@@ -25,12 +25,13 @@
                 </ul>
             </div>
         </header>
+        
         <!-- About -->
         <section class="about">
             <div class="f-column-center text-center">
                 <h2>About</h2>
                 <img src="images/photo.png" alt="Headshot" class="headshot">
-                <ul class="education pb-3">
+                <ul class="education">
                     <li>Joanne Chen</li>
                     <li>1997/10/10</li>
                     <li>National Hex School Normal University<br>Department of Visual Design</li>
@@ -42,6 +43,7 @@
                 </ul>                    
             </div>
         </section>
+
         <!-- Brand -->
         <section class="brand bg-black text-white">
             <div class="f-column-center">
@@ -63,6 +65,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Works -->
         <section class="works works-bg text-center">
             <div class="container">
@@ -104,6 +107,7 @@
                 </ul>
             </div>
         </section>
+
         <!-- Footer -->
         <footer class="text-white bg-black text-center">
             <div class="footer-content">
