“修改連結名稱 git commit -m “修改連結名稱

--- a/six week/app/product_detail.html
+++ b/six week/app/product_detail.html
@@ -23,7 +23,7 @@ bnBtn: Shop now
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb bg-white mb-2 mb-lg-3 p-0">
                             <li class="breadcrumb-item"><a class="text-secondary" href="index.html">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-secondary" href="Product.html">Product</a></li>
+                            <li class="breadcrumb-item"><a class="text-secondary" href="product.html">Product</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Cup</li>
                         </ol>
                     </nav>
