--- a/six week/app/payment.html
+++ b/six week/app/payment.html
@@ -60,7 +60,7 @@ bnBtn: Shop now
                             </div>
                             <div class="form-group d-flex flex-column-reverse flex-sm-row align-items-center mb-3 mb-md-5">
                                 <div class="w-100 w-sm-50">
-                                    <a class="d-flex align-items-center" href="Information.html"><i class="material-icons btn text-primary p-0">keyboard_arrow_left</i>Return to information</a>
+                                    <a class="d-flex align-items-center" href="information.html"><i class="material-icons btn text-primary p-0">keyboard_arrow_left</i>Return to information</a>
                                 </div>
                                 <div class="w-100 w-sm-50">
                                     <input class="btn btn-primary w-100 py-3 mb-4 mb-sm-0" type="submit" value="Pay now">
