--- a/six week/app/Information.html
+++ b/six week/app/Information.html
@@ -22,7 +22,7 @@ bnBtn: Shop now
             </div>
             <div class="col">
                 <h4 class="fz-m">Information</h4>
-                <form action="Payment.html" method="get" class="probootstrap-form">
+                <form action="payment.html" method="get" class="probootstrap-form">
                     <div class="form-group mb-4 mb-md-5">
                         <input type="email" class="form-control mb-2" name="Email" placeholder="Email">
                         <div class="form-check">
