修改圖片路徑

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li class="menu-item">
         <a href="first week/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/1.png" alt="">
+            <img class="theme-img" src="index/1.png" alt="">
             <div class="theme-info">              
               <h3 class="theme-title">第一週 - 履歷設計</h3>
               <div class="skill">
@@ -28,7 +28,7 @@
       <li class="menu-item">
         <a href="two week/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/2&7.png" alt="">
+            <img class="theme-img" src="index/2&7.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第二週 - 個人網站</h3>
               <div class="skill">
@@ -43,7 +43,7 @@
       <li class="menu-item">
         <a href="three week/dist/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/3&4.png" alt="">
+            <img class="theme-img" src="index/3&4.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第三週 - RWD 形象官網 ( 首頁 )</h3>
               <div class="skill">
@@ -61,7 +61,7 @@
       <li class="menu-item">
         <a href="three week/dist/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/3&4.png" alt="">
+            <img class="theme-img" src="index/3&4.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第四週 - RWD 多頁式形象官網</h3>
               <div class="skill">
@@ -79,7 +79,7 @@
       <li class="menu-item">
         <a href="five week/dist/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/5.png" alt="">
+            <img class="theme-img" src="index/5.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第五週 - 後台表單設計</h3>
               <div class="skill">
@@ -99,7 +99,7 @@
       <li class="menu-item">
         <a href="six week/dist/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/6.png" alt="">
+            <img class="theme-img" src="index/6.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第六週 - 電商網站</h3>
               <div class="skill">
@@ -120,7 +120,7 @@
       <li class="menu-item">
         <a href="sevent week/index.html" class="menu-link" target="_blank">
           <div class="theme">
-            <img class="theme-img" src="images/2&7.png" alt="">
+            <img class="theme-img" src="index/2&7.png" alt="">
             <div class="theme-info">
               <h3 class="theme-title">第七週 - 視差滾動</h3>
               <div class="skill">
@@ -138,7 +138,7 @@
       <li class="menu-item">
         <a href="#" class="menu-link" target="_blank">
           <div class="theme">
-            <!-- <img class="theme-img" src="images/8.png" alt=""> -->
+            <!-- <img class="theme-img" src="index/8.png" alt=""> -->
             <div class="theme-info">
               <h3 class="theme-title">第八週 - 大型訂房網站</h3>
               <div class="theme-content">未完成
